Updated for Heroku deployment

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>Indian Music Kit</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../static/style.css">
 </head>
 
 
@@ -41,13 +41,13 @@
     </div>
   </div>
 
-<audio data-key="65" src="Sounds/Tabla.mp3"></audio>
-<audio data-key="83" src="Sounds/Tabla Low.mp3"></audio>
-<audio data-key="68" src="Sounds/Veena.mp3"></audio>
-<audio data-key="70" src="Sounds/Sitar.mp3"></audio>
-<audio data-key="71" src="Sounds/Harmonium1.mp3"></audio>
-<audio data-key="72" src="Sounds/Harmonium2.mp3"></audio>
-<audio data-key="74" src="Sounds/Dholak.mp3"></audio>
+<audio data-key="65" src="../static/Sounds/Tabla.mp3"></audio>
+<audio data-key="83" src="../static/Sounds/Tabla Low.mp3"></audio>
+<audio data-key="68" src="../static/Sounds/Veena.mp3"></audio>
+<audio data-key="70" src="../static/Sounds/Sitar.mp3"></audio>
+<audio data-key="71" src="../static/Sounds/Harmonium1.mp3"></audio>
+<audio data-key="72" src="../static/Sounds/Harmonium2.mp3"></audio>
+<audio data-key="74" src="../static/Sounds/Dholak.mp3"></audio>
 <p>Copyright 2016<br/> Designed by Suraj Pai</p>
 
 
